@@ -16,7 +16,7 @@
 
 package io.confluent.kafka.schemaregistry.rules.cel;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
@@ -40,8 +40,9 @@ import io.confluent.kafka.schemaregistry.storage.RuleSetHandler;
 import io.confluent.kafka.serializers.KafkaAvroDeserializer;
 import io.confluent.kafka.serializers.KafkaAvroDeserializerConfig;
 import io.confluent.kafka.serializers.KafkaAvroSerializer;
-import io.confluent.kafka.serializers.WrapperKeyDeserializer;
-import io.confluent.kafka.serializers.WrapperKeySerializer;
+import io.confluent.kafka.serializers.wrapper.WrapperKeyDeserializer;
+import io.confluent.kafka.serializers.wrapper.WrapperKeySerializer;
+import java.time.Duration;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -62,8 +63,7 @@ import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.apache.kafka.common.serialization.StringSerializer;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -85,8 +85,8 @@ public class CelExecutorIntegrationTest extends ClusterTestHarness {
     super(1, true);
   }
 
-  @Before
-  public void setUp() throws Exception {
+  @Override
+  protected void setUp() throws Exception {
     super.setUp();
     ((KafkaSchemaRegistry) restApp.schemaRegistry()).setRuleSetHandler(new RuleSetHandler() {
       public void handle(String subject, ConfigUpdateRequest request) {
@@ -166,7 +166,7 @@ public class CelExecutorIntegrationTest extends ClusterTestHarness {
 
     int i = 0;
     do {
-      ConsumerRecords<String, Object> records = consumer.poll(1000);
+      ConsumerRecords<String, Object> records = consumer.poll(Duration.ofMillis(1000));
       for (ConsumerRecord<String, Object> record : records) {
         recordList.add(new SimpleEntry<>(record.key(), record.value()));
         i++;
@@ -207,7 +207,7 @@ public class CelExecutorIntegrationTest extends ClusterTestHarness {
     value.setAge(45); // rule: > 18
     value.setIBAN("GB33BUKB20201555555555"); // rule: matches regex
     value.setActive(isActive); // rule: is true
-    value.setBalance(new Float(10.0).floatValue()); // rule: >= 0.0
+    value.setBalance(Float.valueOf(10.0f).floatValue()); // rule: >= 0.0
     value.setMode(mode);
     return value;
   }
